# mcl-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs  resources.rs  tasks.rs
api/src/files/: io.rs  mod.rs  sources.rs
api/src/metadata/: assets.rs
examples/: print.rs  save.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: dirs.rs  lib.rs  metadata.rs  resolver.rs  resources.rs  sources.rs  tasks.rs  util.rs
src/data/: config.rs  imp.rs  mod.rs  mojang.rs  other.rs
src/files/: io.rs  local.rs  mod.rs  remote.rs
src/launch/: process.rs
src/metadata/: assets.rs  game.rs  manifest.rs  mod.rs
src/tasks/: display.rs  download.rs  mod.rs  validate.rs
