[package]
name = "mcl-rs"
version = "0.4.1"
edition = "2021"
rust-version = "1.60.0"

[dependencies]
serde = "1"
serde_derive = "1"
serde_with = "2.1.0"

url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

tokio = { version = "1.17", features = ["fs", "sync"] }
reqwest = { version = "0.11", features = ["json"] }

zip = "0.6.2"
dirs = "4"

tracing = "0.1"
thiserror = "1.0"
