[package]
name = "mcl-api"
version = "0.5.0"
edition = "2021"

[dependencies]
tracing = "0.1"

serde = "1"
serde_derive = "1"
serde_with = "2.1"

url = { version = "2.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"

crossbeam-utils = "0.8"
tokio = { version = "1", features = ["fs", "sync"] }
reqwest = { version = "0.11", features = ["json"] }

zip = "0.6"
dirs = "4"
